--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ BOT_TOKEN=7131428570:AAE2FtaSVkQSnOrGtgJFK1Al1la1voj1NG0
 HUGGINGFACE_ACCESS_TOKEN=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
 PROMPT_PATH="prompt.txt"
 RAG_PATH="docs"
+AUDIO_PATH="../kapitza_audio_model"
