--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ HF_AUTH=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
 PROMPT_PATH="prompt.txt"
 RAG_PATH="docs"
 AUDIO_PATH="../kapitza_audio_model"
+
+HOST_IP=10.16.84.41
+HOST_PORT=9611
