added universal medium classes

--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ PROMPT_PATH="prompt.txt"
 RAG_PATH="docs"
 AUDIO_PATH="../kapitza_audio_model"
 
-HOST_IP=10.16.84.41
+HOST_IP=192.168.65.3#10.16.84.41#10.16.65.11
 HOST_PORT=9611
