--- a/Dockerfile.endpoint
+++ b/Dockerfile.endpoint
@@ -1,6 +1,11 @@
-#FROM nvidia/cuda:12.1.1-cudnn8-devel-ubuntu22.04 as runtime
-FROM ubuntu:jammy
+FROM nvidia/cuda:12.1.1-cudnn8-devel-ubuntu22.04 AS runtime
+# FROM ubuntu:jammy
+
 ARG DEBIAN_FRONTEND=noninteractive
+RUN apt-get update && apt install -y software-properties-common
+RUN add-apt-repository ppa:oibaf/graphics-drivers -y
+RUN apt update && apt install -y vainfo mesa-va-drivers mesa-utils
+
 ENV PATH="/root/miniconda3/bin:${PATH}"
 ARG PATH="/root/miniconda3/bin:${PATH}"
 # Install wget to fetch Miniconda
@@ -23,16 +28,14 @@ RUN arch=$(uname -m) && \
     bash miniconda.sh -b -p /root/miniconda3 && \
     rm -f miniconda.sh
 
+RUN apt-get update && apt install -y git
 RUN conda create -n kap_env python=3.11
+
 SHELL ["conda", "run", "-n", "kap_env", "/bin/bash", "-c"]
 # install tools for straming and file processing
 RUN pip install python-dotenv
-# PyAudio-0.2.14.tar.gz
-# PyAudio-0.2.14-cp311-cp311-linux_x86_64.whl
-# RUN apt-get install gcc-multilib
-# RUN apt-get update && apt-get install -y portaudio19-dev python3-dev python3-pyaudio
-# ENTRYPOINT cat /etc/*release
-# RUN pip3 install pyaudio 
+RUN apt-get update && apt-get install -y portaudio19-dev python3-pyaudio
+RUN pip install pyaudio wave argparse
 COPY . .
-CMD ["conda", "run", "-n", "kap_env", "--no-capture-output",  "python", "server.py"]
+CMD ["conda", "run", "-n", "kap_env", "--no-capture-output",  "python", "endpoint.py"]
 #, "--ip", "10.16.65.11"]
