--- a/docker/Dockerfile.bot
+++ b/docker/Dockerfile.bot
@@ -1,2 +1,3 @@
-FROM kszipa/kapitza
+ARG TAG=latest
+FROM kszipa/kapitza:$TAG
 ENTRYPOINT ["conda", "run", "--no-capture-output", "-n", "kap_env", "python", "bot_runner.py"]
