--- a/docker/Dockerfile.client
+++ b/docker/Dockerfile.client
@@ -1,2 +1,3 @@
-FROM kszipa/kapitza
+ARG TAG=latest
+FROM kszipa/kapitza:$TAG
 CMD ["conda", "run", "-n", "kap_env", "--no-capture-output",  "python", "client_emulator.py"]
