--- a/docker/Dockerfile.client
+++ b/docker/Dockerfile.client
@@ -1,3 +1,4 @@
 ARG TAG=latest
 FROM kszipa/kapitza:$TAG
+COPY . .
 CMD ["conda", "run", "-n", "kap_env", "--no-capture-output",  "python", "client_emulator.py"]
