Streaming mode in LLMProcessor

--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -45,7 +45,7 @@ RUN pip install torch torchaudio
 # CMD python -c "import torch; print(torch.cuda.is_available())"
 # RUN pip install -r requirements.txt
 RUN pip install flash_attn python-dotenv python-telegram-bot gitpython runorm
-RUN pip install llama-index llama-index-embeddings-huggingface
+RUN pip install llama-index llama-index-embeddings-huggingface llama-index-llms-huggingface
 RUN pip install --extra-index-url https://abetlen.github.io/llama-cpp-python/whl/cu121 llama-cpp-python 
 RUN pip install llama-index-llms-llama_cpp
 RUN pip install TTS pyannote.audio accelerate
