--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-BOT_TOKEN=7131428570:AAE2FtaSVkQSnOrGtgJFK1Al1la1voj1NG0
-HF_AUTH=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
+BOT_TOKEN=<place_here>
+HF_AUTH=<place_here>
 PROMPT_PATH="prompt.txt"
 RAG_PATH="docs"
 AUDIO_PATH="../kapitza_audio_model"
